tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_comptime_type_in_runtime_code/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Comptime-only type `FunctionDefinition` cannot be used in runtime code
  ┌─ src/main.nr:2:20
  │
2 │     pub fn foo(_f: FunctionDefinition) {}
  │                    ------------------ Comptime-only type used here
  │

Aborting due to 1 previous error
