tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_comptime_type_in_runtime_code/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Comptime-only type `FunctionDefinition` cannot be used in runtime code
  ┌─ src/main.nr:2:20
  │
2 │     pub fn foo(_f: FunctionDefinition) {}
  │                    ------------------ Comptime-only type used here
  │

Aborting due to 1 previous error
